# ailed-soulsteal

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: 2026-03-30-soulsteal-design.md  ugn-spec.md
examples/: sample.ugn
python/: somabin.py
src/: io.rs  lib.rs  main.rs  vocab.rs
src/filter/: elo.rs  mod.rs  moves.rs  result.rs
src/format/: mod.rs  somabin.rs  stream.rs
src/game/: chess.rs  convert.rs  mod.rs  ugn.rs
