[package]
name = "ailed-soulsteal"
version = "26.3.0"
edition = "2021"
description = "Fast game data extractor — drains PGN into tokenized training data for AILED-Soma"
license = "MIT"
repository = "https://github.com/Ailed-AI/ailed-soulsteal"

[[bin]]
name = "soulsteal"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.27"
zstd = "0.13"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
